--- a/public/sass/userDashboard.scss
+++ b/public/sass/userDashboard.scss
@@ -6,8 +6,8 @@
     top: 100px;
     right: 0px;
     z-index: 7;
-    width: 40px;
-    height: 40px;
+    width: 35px;
+    height: 35px;
     background: red;
     @include border-circle;
     display: flex;
@@ -17,16 +17,21 @@
 
     .image-user {
         position: relative;
-        width: 30px;
-        height: 30px;
-        background: white;
+        width: 25px;
+        height: 25px;
         @include border-circle;
         @include background-initializer;
         background-size: cover;
+        background-image: url("../img/icons/user.png");
         font-size: $font-s;
         overflow: hidden;
-        color: black;
-        font-weight: 550;
+        color: white;
+        font-weight: bolder;
+        overflow: hidden;
+        text-align: center;
+        display: flex;
+        justify-content: center;
+        align-items: center;
     }
 }
 .user-dashboard-wrapper {
@@ -50,7 +55,7 @@
         width: 100%;
         height: 100%;
         display: flex;
-        flex-direction: column;
+        flex-direction: row;
         justify-content: center;
         align-items: center;
         padding: 10px;
@@ -96,6 +101,10 @@
                 background-size: cover;
             }
         }
+        .user {
+            margin-left: 10px;
+            margin-right: 10px;
+        }
         .user-name {
             font-size: $font-l;
             font-weight: 550;
@@ -140,6 +149,9 @@
                     height: 20px;
                     @include border-circle;
                 }
+                .i-edit {
+                    background-image: url("../img/icons/edit.png");
+                }
                 .i-out {
                     background-image: url("../img/svg/signout.svg");
                 }
@@ -171,4 +183,362 @@
     opacity: 1;
     visibility: visible;
     z-index: 6;
+}
+.user-edited-overlay {
+    position: fixed;
+    top: 0px;
+    left: 0px;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.805);
+    z-index: 20;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    .user-edited-wrapper {
+        position: relative;
+        top: 0px;
+        left: 0px;
+        width: 100%;
+        height: 80%;
+
+        .user-edited-close {
+            position: absolute;
+            top: 50px;
+            right: 50px;
+            width: 40px;
+            height: 40px;
+            @include border-circle;
+            background: black;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            box-shadow: 0px 0px 15px rgba(255, 255, 255, 0.658);
+            z-index: 5;
+
+            .i {
+                width: 30px;
+                height: 30px;
+                background-image: url("../img/icons/close-white.png");
+                @include background-initializer;
+                background-size: cover;
+                object-fit: cover;
+            }
+        }
+        .user-edited-close:hover {
+            box-shadow: 0px 0px 15px rgba(255, 0, 0, 0.575);
+        }
+        .user-update-content {
+            position: relative;
+            width: 100%;
+            height: 100%;
+            background:rgba(128, 128, 128, 0.253);
+            display: flex;
+            flex-direction: row;
+            justify-content: space-between;
+            align-items: center;
+
+            div { position: relative; }
+            .user-edited-header {
+                position: absolute;
+                top: 20px;
+                left: 0px;
+                text-align: center;
+                width: 100%;
+                font-size: $font-vl;
+                font-weight: 550;
+            }
+            .user-edit-alert {
+                position: absolute;
+                top: 10px;
+                right: 100px;
+                background: red;
+                padding: 3px;
+                font-size: $font-s;
+                box-shadow: 0px 0px 20px rgba(255, 0, 0, 0.644);
+                display: flex;
+                @include trans-05s;
+                //display: none;
+
+                div {
+                    position: relative; 
+                    margin: 5px;
+                }
+
+                .i {
+                    width: 20px;
+                    height: 20px;
+                    background: white;
+                    @include background-initializer;
+                    background-size: cover;
+                    background-image: url("../img/svg/alert-red.svg");
+                }
+            }
+            .user-edit-alert.alert {
+                display: block;
+                @include trans-05s;
+            }
+            .user-confirm-alert {
+                position: absolute;
+                top: 0px;
+                left: 0px;
+                width: 100%;
+                height: 100%;
+                background: rgba(0, 0, 0, 0.829);
+                z-index: 5;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                display: none;
+                @include trans-05s;
+
+                .confirm-container {
+                    position: relative;
+                    background: red;
+                    display: flex;
+                    justify-content: center;
+                    flex-direction: column;
+                    align-items: center;
+                    width: 85%;
+                    padding: 20px;
+
+                    div {margin: 20px;}
+
+                    .close-confirm-alert {
+                        position: absolute;
+                        top: 0px;
+                        right: 0px;
+                        border: 2px solid white;
+                        width: 40px;
+                        height: 40px;
+                        cursor: pointer;
+                        @include background-initializer;
+                        background-size: contain;
+                        @include border-circle;
+                        background-image: url("../img/icons/close-white.png");
+                    }
+                    .confirm-alert-text {
+                        font-size: $font-vl;
+                        font-weight: 550;
+                        top: 20px;
+                    }
+                    .confirm-btn {
+                        padding: 15px;
+                        border: 2px solid white;
+                        cursor: pointer;
+                        @include border-20;
+                    }
+                    .confirm-btn:hover, .close-confirm-alert:hover {
+                        background-color: rgb(179, 3, 3);
+                    }
+                }
+
+            }
+            .user-confirm-alert.collapse {
+                display: flex;
+                @include trans-05s;
+            }
+            .user-edited-image { 
+                flex-basis: 40%; 
+                display: flex;
+                justify-content: center;
+                align-items: center;
+
+                div { position: relative }
+
+                .edited-image-wrap {
+                    width: 20rem;
+                    height: 20rem;
+                    background: white;
+                    @include border-circle;
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+
+                    .edited-image-container {
+                        width: 17rem;
+                        height: 17rem;
+                        @include border-circle;
+                        background: black;
+                        text-align: center;
+                        @include background-initializer;
+                        background-size: cover;
+                        z-index: 2;
+                    }
+                    .edited-image-container::before {
+                        content: "";
+                        position: absolute;
+                        bottom: 0px;
+                        right: 0px;
+                        width: 80px;
+                        height: 80px;
+                        @include border-circle;
+                        background: grey;
+                        @include background-initializer;
+                        background-size: contain;
+                        object-fit: contain;
+                        background-image: url("../img/svg/camera.gif");
+                    }
+                }
+            }
+            .user-edited-content { 
+                position: relative;
+                flex-basis: 60%; 
+                
+                .user-edited-content-container {
+                    position: relative;
+                    width: 100%;
+                    height: 100%;
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    flex-direction: column;
+
+                    .content {
+                        position: relative;
+                        width: 80%;
+                        display: flex;
+                        justify-content: space-around;
+                        flex-direction: column;
+                        margin-top: $margin-s;
+
+                        .note {
+                            position: absolute;
+                            top: 15px;
+                            right: 140px;
+                            font-size: $font-vs;
+                            color: rgb(255, 110, 110);
+                        }
+
+                        label {
+                            position: relative;
+                            top: 0px;
+                            left: 0px;
+                            z-index: 2;
+                            font-size: $font-vl;
+                            font-weight: 550;
+                            margin-bottom: $margin-vs;
+                        }
+                        
+                        .content-section {
+                            position: relative;
+                            width: 100%;
+                            display: flex;
+                            justify-content: space-around;
+                            align-items: center;
+                            flex-direction: row;
+                            overflow: hidden;
+
+                            .verify-icon {
+                                position: absolute;
+                                top: 10px;
+                                right: 140px;
+                                width: 30px;
+                                height: 30px;
+                                background: white;
+                                z-index: 2;
+                                @include background-initializer;
+                                background-size: contain;
+                                background-image: url("../img/icons/verify.png");
+                            }
+
+                            .content-icon {
+                                position: absolute;
+                                top: 0px;
+                                left: 0px;
+                                width: 50px;
+                                height: 100%;
+                                background: grey;
+                                z-index: 3;
+                                display: flex;
+                                justify-content: center;
+                                align-items: center;
+    
+                                .i {
+                                    position: relative;
+                                    width: 30px;
+                                    height: 30px;
+                                    @include background-initializer;
+                                    background-size: cover;
+                                    object-fit: cover;
+                                }
+                                .i-name {
+                                    background-image: url("../img/icons/user.png");
+                                }
+                                .i-email {
+                                    background-image: url("../img/icons/email.png");
+                                }
+                                .i-tel {
+                                    background-image: url("../img/icons/phone-white.png");
+                                }
+                                .i-password {
+                                    background-image: url("../img/icons/key.png");
+                                }
+                            }
+                            .content-input {
+                                position: relative;
+                                width: 100%;
+                                outline: none;
+                                padding: 15px 60px;
+                                font-size: $font-l;
+                                font-weight: 550;
+                                background: grey;
+                                color: white;
+                                text-align: center;
+                                @include trans-05s;
+                            }
+                            .content-input::first-letter {
+                                text-transform: uppercase;
+                            }
+                            .content-input.edit {
+                                background: white;
+                                text-align: left;
+                                @include trans-05s;
+                                color: black;
+                            }
+                            .content-input.edit .hover-name {
+                                box-shadow: 0px 10px 20px rgba(255, 255, 255, 0.582);
+                                @include trans-05s;
+                            }
+                        }
+                        .content-btns {
+                            position: relative;
+                            display: flex;
+
+                            .btn{
+                                width: 45px;
+                                height: 45px;
+                                background: grey;
+                                margin: 0px 10px;
+                                display: flex;
+                                justify-content: center;
+                                align-items: center;
+                                @include border-circle;
+
+                                .i {
+                                    background-size: cover;
+                                    @include background-initializer;
+                                    object-fit: cover;
+                                    width: 30px;
+                                    height: 30px;
+                                    @include border-circle;
+                                }
+                                .i-close { display: none; }
+                                .i-close.close { display: flex; }
+                                .i-edit { display: flex; background-image: url("../img/icons/edit-white.png"); }
+                                .i-edit.collapse { display: none }
+                                .i-save { background-image: url("../img/icons/thumb-white-up.png"); }
+                                .i-close {background-image: url("../img/icons/close-white.png");}
+
+                            }
+                            .btn:hover {
+                                background: rgba(128, 128, 128, 0.608);
+                            }
+                        }
+                    }
+                }
+            }
+        }
+    }   
 }
