--- a/public/sass/sign-in.scss
+++ b/public/sass/sign-in.scss
@@ -499,7 +499,7 @@
     padding: 1px;
     background: rgba(255, 0, 0, 0.596);
     z-index: 20;
-    display: flex;
+    //display: flex;
     justify-content: center;
     align-items: center;
     font-size: $font-s;
